--- a/xps13-9315.md
+++ b/xps13-9315.md
@@ -7,12 +7,13 @@ Machine specs: Dell Inc. XPS13 9315
 
 - camera is proprietary 
 
-Solution re-enable Dell's `focal` drivers in `/etc/apt/sources.list.d/oem-somerville-psyduck-meta.list`
-
+- [Ubuntu Wiki](https://wiki.ubuntu.com/Dell) documents solutions.  Confirmed for 23.04:
 
 ```
-deb http://dell.archive.canonical.com/ focal somerville
-deb http://dell.archive.canonical.com/ focal somerville-psyduck
+$ sudo add-apt-repository ppa:oem-solutions-group/intel-ipu6
+$ sudo apt install linux-modules-ipu6-generic-hwe-22.04 linux-modules-ivsc-generic-hwe-22.04
+$ sudo apt install libcamhal-ipu6ep0
+$ sudo reboot
 ```
 
 
